<resources>
    <string name="app_name">MyChat</string>

    <!-- Alert Dialog Describe at Login and Register  -->
    <string name="title_alert_dialog_auth">Cancel create account</string>
    <string name="message_alert_dialog_auth">Are you sure you want to cancel creating your account?</string>
    ">
    <string name="positive_alert_dialog_auth">Yes</string>
    <string name="negative_alert_dialog_auth">No</string>

    <!-- Hints Login and Register Input Fields -->
    <string name="hint_register">Register</string>
    <string name="hint_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_retype_password">Re-type Password</string>

    <!-- Text Login and Register Buttons -->
    <string name="create_account_text">Create Account</string>
    <string name="login_text">Login</string>
    <string name="or_register_form_text">or continue with</string>
    <string name="forget_password">Forget password?</string>

    <!-- Hints Initialization Form Profile Input Fields-->
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_username">Username</string>
    <string name="hint_birthday">Birthday</string>
    <string name="hint_about_me">About me</string>
    <string name="hint_type_date">DD/MM/YYYY</string>
    
    <!-- Description -->
    <string name="description_github_auth">GitHub Auth\n</string>
    <string name="description_google_auth">Google Auth</string>
    <string name="description_apple_auth">Apple Auth\n</string>


    <string name="custom_text">Custom</string>
    <string name="default_avatar_text">Default</string>


    <string name="resend_confirmation_text">Resend confirmation email</string>
    <string name="resend_confirmation_text_with_timer">Resend confirmation email: %1$d</string>

    <string name="waiting_verify_email_text">We\'ve sent a confirmation to the email address you provided. Please confirm.</string>
    <string name="send_restore_password_text">Send</string>
    <string name="restore_password_text">To reset your password, please enter your email address below. We\'ll send you a link to reset your password.</string>

    <string name="successfully_sent_reset_password_text">Your password has been reset successfully. Please check your email for the new password.</string>
    <string name="next_slide_text">Next</string>

    <string name="customize_avatar_text">CUSTOMIZE YOUR AVATAR</string>
    <string name="customize_wallpaper_text">YOUR PROFILE WILL LOOKS LIKE</string>
    <string name="fill_your_profile_text">FILL YOUR PROFILE</string>
    <string name="ok">OK</string>
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="media_limit_photos_access_text">You\'ve given access to a select number of photos</string>
    <string name="manage_text">Manage</string>

    <string name="user_anonymous_text">The user has decided to be anonymous</string>
</resources>