<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="false"
    android:paddingHorizontal="@dimen/padding_horizontal_layout_login">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fill_your_profile_text"
        android:textSize="26sp"
        android:layout_gravity="top|center"
        android:layout_marginVertical="40dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_edit"
        android:layout_marginBottom="10dp"

        style="@style/AuthorizationCustomTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/hint_first_name"
            android:inputType="textEmailAddress"
            tools:text="Vladyslav"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_edit"
        android:layout_marginBottom="10dp"
        style="@style/AuthorizationCustomTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/hint_last_name"
            android:inputType="textEmailAddress"
            tools:text="Klymiuk"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:prefixText="#"
        android:layout_marginBottom="10dp"
        style="@style/AuthorizationCustomTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/hint_username"
            android:inputType="text"
            tools:text="vladkk04"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_calendar"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:helperText="DD/MM/YYYY"
        app:helperTextTextColor="@color/color_surface_night"
        android:layout_marginBottom="10dp"
        style="@style/AuthorizationCustomTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_birthday"
            android:inputType="date"
            android:tooltipText="hint_type_date"/>

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>