<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_horizontal_layout_login"
    tools:context=".ui.screens.forgetPassword.ForgetPasswordFragment">

    <TextView
        android:id="@+id/info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_above="@id/input_layout_email"
        android:layout_marginBottom="40dp"
        android:text="@string/restore_password_text"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/DefaultCustomTextInputLayout"
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_text_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="emailAddress"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            tools:text="vladuslaw512@gmail.com"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_send_reset_password"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/hind_siliguri"
        android:text="@string/send_restore_password_text"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        app:cornerRadius="15dp" />

</RelativeLayout>