<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/margin_horizontal_layout"
        android:weightSum="1">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text="@string/fill_your_profile_text"
            android:textSize="26sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.75"
            android:gravity="top"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/DefaultCustomTextInputLayout"
                android:id="@+id/input_layout_first_name"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:hint="@string/hint_first_name"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_edit">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:inputType="textFilter"
                    android:maxLines="1"
                    android:maxLength="50" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/DefaultCustomTextInputLayout"
                android:id="@+id/input_layout_last_name"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:hint="@string/hint_last_name"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_edit">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:maxLength="50"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/DefaultCustomTextInputLayout"
                android:id="@+id/input_layout_username"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:hint="@string/hint_username"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:prefixText="#">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:maxLength="50"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/DefaultCustomTextInputLayout"
                android:id="@+id/input_layout_birthday"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:hint="@string/hint_birthday"
                app:endIconDrawable="@drawable/ic_calendar"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/color_surface_night">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/DefaultCustomTextInputLayout"
                android:id="@+id/input_layout_about_me"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:hint="@string/hint_about_me"
                app:counterEnabled="true"
                app:counterMaxLength="200"
                app:startIconDrawable="@drawable/ic_edit"
                app:endIconMode="clear_text"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text_about_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:maxLines="3"
                    android:maxLength="200"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>